tests/specs/run/error_017_hide_long_source_ts/error_017_hide_long_source_ts.ts.out
[WILDCARD]
TS2532 [ERROR]: Object is possibly 'undefined'.
    at [WILDCARD]/error_017_hide_long_source_ts.ts:3:1

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
